--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,11 @@
+body {
+    background: url("http://pngimg.com/uploads/burger_sandwich/burger_sandwich_PNG4135.png") no-repeat center center fixed;
+    background-size: cover;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: steelblue;
+    
+}
+
 li {
     padding: 5px;
     margin: 5px;
