--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-        <link rel="stylesheet" href="../../public/assets/css/style.css" type="text/css" />
-        <title>Burger Devourer!</title>
-        <script src="https://code.jquery.com/jquery.js"></script>
-        <script src="/assets/js/burgers.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../public/assets/css/style.css" type="text/css" />
+    <title>Burger Devourer!</title>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="../../models/burger.js"></script>
 </head>
 <body>
     
