--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 li {
     padding: 5px;
     margin: 5px;
-    background: #faebd7;
+    background: #f39b27;
 }
 
 .label {
@@ -19,7 +19,7 @@ li {
 .create-update-form {
     padding: 5px;
     margin: 5px;
-    background: aqua;
+    background: rgb(20, 161, 161);
 }
 
 .form-group {
